Fix: spacing issues

--- a/landing/components/Roadmap/Roadmap.module.scss
+++ b/landing/components/Roadmap/Roadmap.module.scss
@@ -1,6 +1,7 @@
 .container {
   padding-top: 4rem;
   margin-bottom: 26rem;
+  margin-top: 6vh;
   background: rgb(50, 1, 50);
   background: linear-gradient(
     180deg,
