--- a/landing/components/VideoSection/VideoSection.module.scss
+++ b/landing/components/VideoSection/VideoSection.module.scss
@@ -10,7 +10,7 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        margin-top: 30px;
+        margin-top: 6vh;
         z-index:2;
         width:100vw;
 
@@ -72,9 +72,14 @@
         .image {
             display:flex;
             width:50%;
-            height:60%;
+            height:100%;
             justify-content: center;
-            align-items: center;
+            align-items: flex-end;
+
+            img {
+                width: 70%;
+                margin-bottom: 30px;
+            }
         }
 
         .text {
@@ -87,16 +92,14 @@
             padding-top: 3vh;
             padding-bottom: 3vh;
             padding-left: 2vw;
+            padding-right: 2vw;
             line-height: 40px;
             background-color: #140e1e;
             border-radius: 30px;
             opacity: 0.9;
         }
 
-        img {
-            width: 80%;
-            margin-bottom: "30px";
-        }
+       
 
         h1 {
             font-size: 45px;
@@ -207,7 +210,7 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        margin-top: 30px;
+        margin-top: 6vh;
         padding:0;
         z-index:2;
 
